# EcoPulse

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml
src/: data_cleaner.py  data_enricher.py  data_fetcher.py  data_filter.py  data_processor.py  database_manager.py  logger.py  main.py  pipeline_manager.py  reddit_fetcher.py
tests/: test_data_fetcher.py  test_data_filter.py  test_reddit_fetcher.py
