[tool.poetry]
name = "eco-pulse"
version = "0.1.0"
description = "A Reddit-based environmental trend tracker"
authors = ['jlimpert@yahoo.com']
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
greenlet = "3.1.1"
idna = "3.10"
mysql-connector-python = "9.2.0"
numpy = "2.2.2"
pandas = "2.2.3"
praw = "7.8.1"
prawcore = "2.4.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
requests = "2.32.3"
six = "1.17.0"
SQLAlchemy = "2.0.37"
typing-extensions = "4.12.2"
tzdata = "2025.1"
update-checker = "0.18.0"
urllib3 = "2.3.0"
websocket-client = "1.8.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.10.0"
bandit = "^1.7.5"
isort = "^5.12.0"
pyupgrade = "^3.14.0"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]
